# DaseR

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  commit-lint.yml
benchmarks/: bench_e2e_daser_vs_lmcache.py  bench_storage_imdb.py
daser/: config.py  logging.py
daser/connector/: daser_connector.py  gds_transfer.py  ipc_client.py
daser/position/: base.py  fixed_offset.py
daser/retrieval/: base.py  prefix.py
daser/server/: __main__.py  chunk_manager.py  doc_registry.py  ipc_server.py  metadata_store.py
daser/service/: __init__.py  __main__.py  chunker.py  http_api.py  vllm_client.py
doc/plans/: 2026-04-14-plan2-gds-transfer.md  2026-04-14-plan3-server.md  2026-04-14-plan4-connector.md
docs/: architecture.md  development.md  source.md
docs/design/: README.md  architecture.md  components.md  flows.md  serve.md
docs/insights/: motivation_zh.md
docs/optimizations/: 0_e2e_daser_vs_lmcache.md  1_connector_hotpath_opt.md  e2e_daser_vs_lmcache.json  e2e_daser_vs_lmcache.md
docs/superpowers/design/: 2026-04-13-system-design.md
docs/superpowers/plans/: 2026-04-13-plan1-scaffolding-storage.md  2026-04-14-vllm-e2e-integration-test.md
docs/superpowers/specs/: 2026-04-14-vllm-e2e-integration-test-design.md
examples/service_demo/: README.md  demo.py
tests/: test_config.py
tests/connector/: test_daser_connector.py  test_gds_transfer.py  test_ipc_client.py
tests/integration/: conftest.py  test_vllm_e2e.py
tests/position/: test_fixed_offset.py
tests/retrieval/: test_prefix_index.py
tests/server/: test_chunk_manager.py  test_doc_registry.py  test_ipc_server.py  test_main_cli.py  test_metadata_store.py
