[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "daser"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "msgpack>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "B", "SLF", "I"]

[tool.ruff.lint.isort]
known-first-party = ["daser"]
force-sort-within-sections = true

[tool.mypy]
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires GPU, model weights, and DaseR server (deselect with -m 'not integration')",
    "slow: slow tests excluded from quick runs (deselect with -m 'not slow')",
]
